# demo-rag-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml
docs/: api.md
src/: __init__.py  cache.py  config.py  database.py  exceptions.py  llm.py  main.py  response.py  schema.py
src/core/: __init__.py  api.py  chat.py  dto.py  example_search_result.json  history.py  prompt.py  user.py
